--- a/views/denuncias.jade
+++ b/views/denuncias.jade
@@ -35,59 +35,66 @@ mixin pagination(start, numPages, curr, base)
 						span(aria-hidden="true" style={color:'#000'}) &raquo;				
 extends layout.jade
 block content
-	div.page-header
-		h1 Denuncias
-			small(style={'float':'right'}) listado de denuncias
-	div(style={'width':'100%','margin-top': '25px', 'margin-bottom':'25px'}).container
-		div(style={float:'right'})
-			if(maxPages<5)
-				if page<=1
-					+pagination(1,maxPages, page, '/app/denuncias?page=')
-				else
-					+pagination(1,maxPages, page, '/app/denuncias?page=')				
-			else
-				if page<3
-					+pagination(1, 5, page,'/app/denuncias?page=')
-				else if((maxPages-page) <3)
-					+pagination(maxPages-4, 5, page,'/app/denuncias?page=')
-				else
-					+pagination(page-2, 5, page,'/app/denuncias?page=')
-		h1 #{next}
-		each denuncia in denuncias
-			hr(style={'margin': '35px 0px 0px 0px'})
-			div(style={'background':'rgba(255,255,255,0.3)', 'padding-top':'20px', 'padding-bottom':'20px'})
-				.media(style={ 'padding-left':'20px', 'padding-right':'20px'})
-					a.pull-left
-						if denuncia.imagenes != null
-							img(src="#{denuncia.imagenes[0].path}" style={'width' : '100px','height' : '100px'}).media-object.img-thumbnail
+	.section.clearfix.object-non-visible(data-animation-effect='fadeInRightBig')
+		// Header Inicio Perfil +  Nombre Usuario
+		.container
+			.row
+				.col-md-12
+					h1#iniciar.title
+						i.fa.fa-inbox(style={'margin-left':'5px', 'margin-right': '5px'})
+						span Listado de denuncias
+					div(style={float:'left'})
+						if(maxPages<5)
+							if page<=1
+								+pagination(1,maxPages, page, '/app/denuncias?page=')
+							else
+								+pagination(1,maxPages, page, '/app/denuncias?page=')				
 						else
-							img(src="http://telecapita.org/sites/all/themes/flat/images/thumbnail-default.jpg" style={'width' : '100px','height' : '100px'}).media-object.img-thumbnail
-					.media-body
-						h4(style={'float':'left'}).media-heading #{denuncia.titulo}
-						p.text-right #{denuncia.fecha}						
-						p.text-right Por #{denuncia.usuario[0].profile.username} 
-						p.text-right 
-							a(href='/app/denuncia/#{denuncia.gid}').btn.btn-danger Ver denuncia
-								i.glyphicon.glyphicon-chevron-right
-						div(style={'max-width':'100%','word-break':'break-all'})
-							i.fa.fa-comments
-							i  
-							if denuncia.comentarios != null
-								|  #{denuncia.comentarios.length}
+							if page<3
+								+pagination(1, 5, page,'/app/denuncias?page=')
+							else if((maxPages-page) <3)
+								+pagination(maxPages-4, 5, page,'/app/denuncias?page=')
 							else
-								| 0
-							i  | 
-							i.fa.fa-image 
-							i
-							if denuncia.imagenes != null	
-								|  #{denuncia.imagenes.length}
-							else
-								| 0
-							i  | 
-							i.fa.fa-tags
-							i  
-							if denuncia.tags != null
-								each tag in denuncia.tags
-									| ##{tag} 
-			hr(style={'margin': '0px 0px 20px 0px'})
-		
+								+pagination(page-2, 5, page,'/app/denuncias?page=')
+					
+		// Contenedor del contenido del perfil
+		.container
+			.row
+				each denuncia in denuncias
+					hr(style={'margin': '35px 0px 0px 0px'})
+					div(style={'background':'rgba(255,255,255,0.3)', 'padding-top':'20px', 'padding-bottom':'20px'})
+						.media(style={ 'padding-left':'20px', 'padding-right':'20px'})
+							a.pull-left
+								if denuncia.imagenes != null
+									img(src="#{denuncia.imagenes[0].path}" style={'width' : '100px','height' : '100px'}).media-object.img-thumbnail
+								else
+									img(src="http://telecapita.org/sites/all/themes/flat/images/thumbnail-default.jpg" style={'width' : '100px','height' : '100px'}).media-object.img-thumbnail
+							.media-body(style="width: 100%; display: inline;")
+								h4(style={'float':'left'}).media-heading #{denuncia.titulo}
+								p.text-right #{denuncia.fecha}						
+								p.text-right Por #{denuncia.usuario[0].profile.username} 
+								p.text-right 
+									a(href='/app/denuncia/#{denuncia.gid}').btn.btn-danger Ver denuncia
+										i.fa.fa-eye
+								div(style={'max-width':'100%','word-break':'break-all'})
+									i.fa.fa-comments
+									i  
+									if denuncia.comentarios != null
+										|  #{denuncia.comentarios.length}
+									else
+										| 0
+									i  | 
+									i.fa.fa-image 
+									i
+									if denuncia.imagenes != null	
+										|  #{denuncia.imagenes.length}
+									else
+										| 0
+									i  | 
+									i.fa.fa-tags
+									i  
+									if denuncia.tags != null
+										each tag in denuncia.tags
+											| ##{tag} 
+					hr(style={'margin': '0px 0px 20px 0px'})
+				
